--- a/team/carlos-guzman/index.html
+++ b/team/carlos-guzman/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="stylesheet" href="/emorypolicylab/css/style.min.7c3ffe0113298076f09af85d2d551c2405d4942203bfa4bf1d4009bd58f5d5db.css">
+  <link rel="stylesheet" href="/emorypolicylab/css/style.min.1e95b3a23feec377db5e3871a3b6ee32d58f8bb8aeda4bb15b5c5007e01e2ca6.css">
   
 
   
@@ -96,8 +96,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <h1 class="title">Carlos Guzman</h1>
-      <div class="content"><p>Add
-information</p>
+      <div class="content"><p>Hi, I&rsquo;m Carlos. I&rsquo;m double majoring in Economics and Sociology.</p>
 </div>
     </div>
   </div>
