--- a/services/index.html
+++ b/services/index.html
@@ -110,7 +110,7 @@
     <div class="col-12 col-md-6 mb-3"><div class="service service-summary">
   <div class="service-content">
     <h2 class="service-title">
-      <a href="/emorypolicylab/services/meta/">Systematic Review and Meta analysis of Unconditional Cash Transfer Studies</a>
+      <a href="/emorypolicylab/services/meta/">Systematic Review and Meta-Analysis of Unconditional Cash Transfer Studies</a>
     </h2>
     <p>Since May 2020, EPL members have systematically searched, collected, categorized, and analyzed the recent but vast…</p>
   </div>
