--- a/services/meta/index.html
+++ b/services/meta/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Systematic Review and Meta analysis of Unconditional Cash Transfer Studies - Emory Policy Lab</title>
+  <title>Systematic Review and Meta-Analysis of Unconditional Cash Transfer Studies - Emory Policy Lab</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" type="image/png" href="/emorypolicylab/favicon-32x32.png">
@@ -96,7 +96,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-        <h1 class="title">Systematic Review and Meta analysis of Unconditional Cash Transfer Studies</h1>
+        <h1 class="title">Systematic Review and Meta-Analysis of Unconditional Cash Transfer Studies</h1>
         <div class="content"><p>Since May 2020, EPL members have systematically searched, collected, categorized, and analyzed the recent but vast literature analyzing the effects of unconditional cash transfers (UCTs) on household welfare.</p>
 <p>At present, students are empirically analyzing the characteristics of these studies and their findings in order to draw more general inferences on the state of the literature and the types of programs that have been studied.</p>
 <p>This project will result in a full-length manuscript to be submitted to an academic journal by Spring 2021.</p>
